--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@ html, body {
   flex-direction: column;
 }
 
+/*
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Quicksand:wght@300;400;500;600;700&display=swap');
+*/
 
 /*
 div {
