--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ p {
   color: #FFFFFF;
   text-transform: uppercase;
   font-weight: bold;
+  font-size: 1.5rem;
   padding-top: 15px;
   padding-bottom: 15px;
   text-align: center;
