--- a/itapasila/css/style.css
+++ b/itapasila/css/style.css
@@ -1,6 +1,6 @@
 /********** Template CSS **********/
 :root {
-    --primary: #8F916B;
+    --primary: #707255;
     --secondary: #DDB040;
     --light: #F7F7F7;
     --dark: #404A3D;
@@ -143,7 +143,7 @@
     }
 }
 
-/*** Project Portfolio ***/
+/*** Project Portfolio eli katutaideosio ***/
 #portfolio-flters {
     display: inline-block;
     background: var(--light);
@@ -331,252 +331,4 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-
-/*** Service ***/
-.service-item {
-    position: relative;
-    border-radius: 8px;
-    box-shadow: 0 0 45px rgba(0, 0, 0, .07);
-}
-
-.service-item .service-img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    border-radius: 8px;
-    overflow: hidden;
-    z-index: -1;
-}
-
-.service-item .service-img img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    object-fit: cover;
-    border-radius: 10px;
-}
-
-.service-item .service-img::before {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: rgba(0, 0, 0, .5);
-    border-radius: 10px;
-    z-index: 1;
-}
-
-.service-item .service-img::after {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: #FFFFFF;
-    transition: .5s ease-out;
-    z-index: 2;
-}
-
-.service-item:hover .service-img::after {
-    width: 0;
-    left: auto;
-    right: 0;
-}
-
-.service-item .service-text .service-icon {
-    width: 140px;
-    height: 140px;
-    padding: 15px;
-    margin-top: -70px;
-    margin-bottom: 40px;
-    background: #FFFFFF;
-    border-radius: 140px;
-    overflow: hidden;
-    box-shadow: 0 0 60px rgba(0, 0, 0, .1);
-}
-
-.service-item .service-text h5,
-.service-item .service-text p {
-    transition: .5s;
-}
-
-.service-item:hover .service-text h5,
-.service-item:hover .service-text p {
-    color: #FFFFFF;
-}
-
-.service-item .service-text .btn {
-    color: var(--secondary);
-    background: #FFFFFF;
-    box-shadow: 0 0 45px rgba(0, 0, 0, .25);
-}
-
-.service-item .service-text .btn:hover {
-    color: var(--dark);
-    background: var(--secondary);
-}
-
-
-/*** Product ***/
-.product-item {
-    position: relative;
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 0 45px rgba(0, 0, 0, .07);
-}
-
-.product-item .product-overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgba(0, 0, 0, .5);
-    opacity: 0;
-    padding-top: 60px;
-    transition: .5s;
-}
-
-.product-item:hover .product-overlay {
-    opacity: 1;
-    padding-top: 0;
-}
-
-
-/*** Team ***/
-.team-item {
-    position: relative;
-    text-align: center;
-    border-radius: 8px;
-    box-shadow: 0 0 45px rgba(0, 0, 0, .07);
-}
-
-.team-item .btn {
-    border-color: transparent;
-    box-shadow: 0 0 45px rgba(0, 0, 0, .2);
-}
-
-
-/*** Testimonial ***/
-.testimonial-img {
-    position: relative;
-    min-height: 400px;
-}
-
-.testimonial-img::after {
-    position: absolute;
-    content: "\f10d";
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    font-size: 200px;
-    color: #EEEEEE;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: -1;
-}
-
-.testimonial-img img {
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    border-radius: 100px;
-}
-
-.testimonial-img img:nth-child(1) {
-    top: 0;
-    left: 0;
-}
-
-.testimonial-img img:nth-child(2) {
-    top: 60%;
-    left: 20%;
-}
-
-.testimonial-img img:nth-child(3) {
-    top: 20%;
-    left: 60%;
-}
-
-.testimonial-img img:nth-child(4) {
-    bottom: 0;
-    right: 0;
-}
-
-.testimonial-img img .animated.pulse {
-    animation-duration: 2s;
-}
-
-.testimonial-carousel .owl-item img {
-    width: 100px;
-    height: 100px;
-    border-radius: 100px;
-}
-
-.testimonial-carousel .owl-nav {
-    margin-top: 30px;
-    display: flex;
-}
-
-.testimonial-carousel .owl-nav .owl-prev,
-.testimonial-carousel .owl-nav .owl-next {
-    margin-right: 15px;
-    width: 45px;
-    height: 45px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--secondary);
-    border-radius: 45px;
-    box-shadow: 0 0 45px rgba(0, 0, 0, .2);
-    font-size: 22px;
-    transition: .5s;
-}
-
-.testimonial-carousel .owl-nav .owl-prev:hover,
-.testimonial-carousel .owl-nav .owl-next:hover {
-    background: var(--secondary);
-    color: var(--dark);
-}
-
-
-/*** Footer ***/
-.footer {
-    color: #B0B9AE;
-}
-
-.footer .btn.btn-link {
-    display: block;
-    margin-bottom: 5px;
-    padding: 0;
-    text-align: left;
-    color: #B0B9AE;
-    font-weight: normal;
-    text-transform: capitalize;
-    transition: .3s;
-}
-
-.footer .btn.btn-link::before {
-    position: relative;
-    content: "\f105";
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    margin-right: 10px;
-}
-
-.footer .btn.btn-link:hover {
-    color: var(--light);
-    letter-spacing: 1px;
-    box-shadow: none;
 }
